<resources>
    <string name="app_name">Kannada News</string>
    <string name="loading_label">Welcome proud kannadigas</string>
    <string name="error_not_connected">No Network Connectivity</string>
    <string name="alert_button_label">OK</string>

    <string name="vk_button_label">vijaya Karnatak</string>
    <string name="kp_button_label">Kannada Prabha</string>
    <string name="uv_button_label">Udayavani</string>
    <string name="pv_button_label">praja vani</string>
    <string name="vv_button_label">vijaya vani</string>
    <string name="sv_button_label">Sanje Vani</string>
    <string name="sk_button_label">samyuktha karnataka</string>
    <string name="kk_button_label">Kranti Kannada</string>
    <string name="kr_button_label">Kannada Rathna</string>
    <string name="kd_button_label">Kannada Duniya</string>
    <string name="jm_button_label">Janatha Maadhyama</string>
    <string name="pp_button_label">Praja Pragathi</string>
    <string name="vb_button_label">Vartha Bharathi</string>
    <string name="sn_button_label">Suvarna News</string>
    <string name="bn_button_label">Balkani News</string>
    <string name="jv_button_label">Janatha Vani</string>
    <string name="tc_button_label">Kannada Cricket</string>
    <string name="wd_button_label">Web Duniya</string>
    <string name="oi_button_label">One India</string>
    <string name="vvn_button_label">Vishwa Vani</string>


    <string name="vk_url">https://vijaykarnataka.indiatimes.com</string>;
    <string name="kp_url">http://www.kannadaprabha.com/</string>;
    <string name="uv_url">https://www.udayavani.com/</string>;
    <string name="pv_url">http://www.prajavani.net/</string>;
    <string name="vv_url">http://epapervijayavani.in/</string>;
    <string name="sv_url">http://sanjevani.com/sanjevani/</string>;
    <string name="sk_url">http://epaper.samyukthakarnataka.com/</string>;
    <string name="kk_url">http://krantiindia.com/</string>;
    <string name="kr_url">http://www.kannadaratna.com/</string>;
    <string name="kd_url">http://kannadadunia.com/</string>;
    <string name="jm_url">http://janathamadhyama.epapertoday.com/</string>;
    <string name="pp_url">http://prajapragathi.epapertoday.com/</string>;
    <string name="vb_url">http://www.varthabharati.in/</string>;
    <string name="sn_url">http://kannada.asianetnews.com/</string>;
    <string name="bn_url">https://www.balkaninews.com/</string>;
    <string name="jv_url">http://www.janathavani.com/</string>;
    <string name="tc_url">http://kannada.thatscricket.com/</string>;
    <string name="wd_url">http://kannada.webdunia.com/</string>;
    <string name="oi_url">https://kannada.oneindia.com/</string>;
    <string name="vvn_url">https://www.vishwavani.news/</string>;

    <!--sample add unit for banner-->
    <string name="test_ad_unit_id_for_home_banner">ca-app-pub-3940256099942544/6300978111</string>
    <string name="test_ad_unit_id_for_browse_banner">ca-app-pub-3940256099942544/6300978111</string>
    <!--sample add unit for interstitial-->
    <string name="test_ad_unit_id_for_browse_interstitial">ca-app-pub-3940256099942544/1033173712</string>

    <!--admob related for prod-->
    <string name="ad_unit_id_for_home_banner">ca-app-pub-4540069239014337/6997366770</string>
    <string name="ad_unit_id_for_browse_banner">ca-app-pub-4540069239014337/7043283011</string>
    <string name="ad_unit_id_for_browse_interstitial">ca-app-pub-4540069239014337/9447861174</string>

    <string name="admob_app_id">ca-app-pub-4540069239014337~1307654886</string>

    <string name="about_us">We are a team of freelance Mobile Apps developers based out in Bangalore , India. For Android, iOS Apps development, please write back to us at sgdmgroup@gmail.com</string>
<string name="my_galaxy_j7_device_id">DE7CC96B790D95A6BC6182D37F569AF4</string>
</resources>
